--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=CaniCampusConnect-API
+spring.datasource.url=jdbc:mysql://localhost:3306/CaniCampusConnect?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.platform=test-data
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
