--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/CaniCampusConnect?serverTimezo
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create
-spring.sql.init.platform=test-data
+spring.sql.init.platform=cani-campus-connect
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
