--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,23 @@
+#Application name
 spring.application.name=CaniCampusConnect-API
-spring.datasource.url=jdbc:mysql://localhost:3306/CaniCampusConnect?serverTimezone=UTC&createDatabaseIfNotExist=true
+
+#Database connection
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+#Database creation
 spring.jpa.hibernate.ddl-auto=create
-spring.sql.init.platform=cani-campus-connect
+spring.sql.init.platform=${SQL_FILE_NAME}
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+#Picture related
+spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-request-size=30MB
+
+file.default.accepted.types=image/png,image/jpeg,image/jpg,application/pdf
+
+#File transfert
+public.upload.folder=${PUBLIC_UPLOAD_FOLDER}
+private.upload.folder=${PRIVATE_UPLOAD_FOLDER}
