--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.application.name=CaniCampusConnect-API
 
 #Database connection
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?serverTimezone=UTC&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+
+
 
 #Database creation
 spring.jpa.hibernate.ddl-auto=create
