Add support for external configuration files and JWT secret configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #Application name
+spring.config.import=file:./.env[.properties],optional:file:./.local.env[.properties]
 spring.application.name=CaniCampusConnect-API
 
 #Database connection
@@ -21,3 +22,6 @@ file.default.accepted.types=image/png,image/jpeg,image/jpg,application/pdf
 #File transfert
 public.upload.folder=${PUBLIC_UPLOAD_FOLDER}
 private.upload.folder=${PRIVATE_UPLOAD_FOLDER}
+
+#JWT Related
+jwt.secret=${JWT_SECRET}
