--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
 #Database creation
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
 spring.sql.init.platform=${SQL_FILE_NAME}
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
