Add static resource locations and file upload size limits in application properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,8 @@ private.upload.folder=${PRIVATE_UPLOAD_FOLDER}
 
 #JWT Related
 jwt.secret=${JWT_SECRET}
+
+#Image related
+spring.web.resources.static-locations=file:./uploads/,classpath:/static/
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
