Set default time zone to UTC in application properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
 spring.sql.init.platform=${SQL_FILE_NAME}
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+spring.jackson.time-zone=UTC
 
 #Picture related
 spring.servlet.multipart.max-file-size=30MB
