Add email integration configuration to `application.properties`.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,10 @@ jwt.secret=${JWT_SECRET}
 spring.web.resources.static-locations=file:./uploads/,classpath:/static/
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+
+#Log integration
+email.host=${EMAIL_HOST}
+email.port=${EMAIL_PORT}
+email.user=${EMAIL_USERNAME}
+email.password=${EMAIL_PASSWORD}
