--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 
-#Log integration
+#Log integration mail
 email.host=${EMAIL_HOST}
 email.port=${EMAIL_PORT}
 email.user=${EMAIL_USERNAME}
