Refactor email and file property configuration for better clarity and structure.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,8 @@ spring.servlet.multipart.max-request-size=30MB
 file.default.accepted.types=image/png,image/jpeg,image/jpg,application/pdf
 
 #File transfert
-public.upload.folder=${PUBLIC_UPLOAD_FOLDER}
-private.upload.folder=${PRIVATE_UPLOAD_FOLDER}
+#public.upload.folder=${PUBLIC_UPLOAD_FOLDER}
+#private.upload.folder=${PRIVATE_UPLOAD_FOLDER}
 
 #JWT Related
 jwt.secret=${JWT_SECRET}
@@ -34,7 +34,19 @@ spring.servlet.multipart.max-request-size=10MB
 
 
 #Log integration mail
-email.host=${EMAIL_HOST}
-email.port=${EMAIL_PORT}
-email.user=${EMAIL_USERNAME}
-email.password=${EMAIL_PASSWORD}
+spring.mail.host=${EMAIL_HOST}
+spring.mail.port=${EMAIL_PORT}
+spring.mail.username=${EMAIL_USER}
+spring.mail.password=${EMAIL_PASSWORD}
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+
+app.base-url=http://localhost:8080
+app.security.token.expiration-hours=24
+app.security.token.max-emails-per-hour=3
+
