Update artifact name, environment variables, and Dockerfile for consistency with `CaniCampusConnect_API`.

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
 	<properties>
 		<java.version>17</java.version>
-		<final.jar.name>app</final.jar.name>
+		<final.jar.name>CaniCampusConnect_api</final.jar.name>
 	</properties>
 
 	<dependencies>
