--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,6 +47,8 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 
 app.base-url=http://localhost:8080
+app.frontend-url=http://localhost:4200
+
 app.security.token.expiration-hours=24
 app.security.token.max-emails-per-hour=3
 
