Add `server.error.include-message` property to application configuration for error handling improvement

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,7 @@ app.frontend-url=http://localhost:4200
 app.security.token.expiration-hours=24
 app.security.token.max-emails-per-hour=3
 
+#Error handling
+server.error.include-message=always
+
+
