Revise comments in `BreedOrderSerializer` to clarify serialization logic.

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 JWT_SECRET=secret
 
 # Application Properties
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=root
@@ -11,3 +11,5 @@ EXECUTE_SQL=always
 DDL_AUTO=create
 
 APP_NAME=canicampusconnect-api
+
+PRIVATE_UPLOAD_FOLDER
