--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,22 @@
 services:
-  static:
-    image: nginx:latest
+  back:
+    build: .
     ports:
-      - "81:80"
+      - "8080:8080"
+    depends_on:
+      - db
     volumes:
-      - ${UPLOAD_FOLDER}:/usr/share/nginx/html/pictures
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    env_file:
-      - .env
+      - ${PRIVATE_UPLOAD_FOLDER}:/uploads
     environment:
-      - UPLOAD_FOLDER=${UPLOAD_FOLDER}
+      - PRIVATE_UPLOAD_VOLUME=${PRIVATE_UPLOAD_FOLDER}
+  db:
+    image: mysql:5.7
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: 'root'
+    expose:
+      - "3306"
+    volumes:
+      - data:/var/lib/mysql
+volumes:
+  data:
