Update GitHub Actions workflow to fix DB_HOST replacement and clean `.env` file

--- a/.env
+++ b/.env
@@ -1,15 +1,27 @@
-JWT_SECRET=secret
+JWT_SECRET
 
 # Application Properties
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=3306
+#TODO Remplacer cette valeur secrète
 DB_USER=root
+#TODO Remplacer cette valeur secrète
 DB_PASSWORD=root
 DB_NAME=CaniCampusConnect
+
+
 SQL_FILE_NAME=cani-campus-connect
+
+#TODO en prod never
 EXECUTE_SQL=always
+#TODO en prod none
 DDL_AUTO=create
 
 APP_NAME=canicampusconnect-api
+
+EMAIL_HOST
+EMAIL_PORT
+EMAIL_USER
+EMAIL_PASSWORD
 
 PRIVATE_UPLOAD_FOLDER
