Update `.env` file with default values for environment variables

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-JWT_SECRET
+JWT_SECRET=secret
 
 # Application Properties
 DB_HOST=localhost
@@ -19,9 +19,9 @@ DDL_AUTO=create
 
 APP_NAME=canicampusconnect-api
 
-EMAIL_HOST
-EMAIL_PORT
-EMAIL_USER
-EMAIL_PASSWORD
+EMAIL_HOST=local_env_host
+EMAIL_PORT=007
+EMAIL_USER=email
+EMAIL_PASSWORD=passcode
 
-PRIVATE_UPLOAD_FOLDER
+PRIVATE_UPLOAD_FOLDER=folder
