Add `proxy`, `static`, and network configurations to `docker-compose.yml`.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,33 @@
 services:
-  back:
-    build: .
+  proxy:
+    image: nginx:latest
     ports:
-      - "8080:8080"
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx-proxy.conf:/etc/nginx/nginx.conf
+      - ./certs:/etc/nginx/certs
+    depends_on:
+      - front
+      - back
+      - static
+    networks:
+      - proxy-network
+
+  back:
+    image : victorbartolomeo/canicampusconnect-api:0.0.1
+    expose:
+      - "8080"
     depends_on:
       - db
     volumes:
       - ${PRIVATE_UPLOAD_FOLDER}:/uploads
     environment:
       - PRIVATE_UPLOAD_VOLUME=${PRIVATE_UPLOAD_FOLDER}
+    networks:
+      - proxy-network
+      - backend-network
+
   db:
     image: mysql:5.7
     restart: always
@@ -18,5 +37,24 @@ services:
       - "3306"
     volumes:
       - data:/var/lib/mysql
+    networks:
+      - backend-network
+      -
+  static:
+    image: nginx:latest
+    expose:
+      - "80"
+    volumes:
+      - ${PRIVATE_UPLOAD_FOLDER}:/usr/share/nginx/html/images
+      - ./nginx-static.conf:/etc/nginx/conf.d/default.conf
+    environment:
+      - PRIVATE_UPLOAD_FOLDER=${PRIVATE_UPLOAD_FOLDER}
+    networks:
+      - proxy -network
+
 volumes:
   data:
+
+networks :
+  proxy-network :
+  backend-network :
