--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 JWT_SECRET=secret
 
 # Application Properties
-DB_HOST=localhost
+DB_HOST=db-1
 DB_PORT=3306
 #TODO Remplacer cette valeur secrète
 DB_USER=root
@@ -24,4 +24,4 @@ EMAIL_PORT=007
 EMAIL_USER=email
 EMAIL_PASSWORD=passcode
 
-PRIVATE_UPLOAD_FOLDER=folder
+PRIVATE_UPLOAD_FOLDER=./uploads
