Uncomment `public.upload.folder` and `private.upload.folder` properties in `application.properties` to enable configurable file upload paths.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,8 @@ spring.servlet.multipart.max-request-size=30MB
 file.default.accepted.types=image/png,image/jpeg,image/jpg,application/pdf
 
 #File transfert
-#public.upload.folder=${PUBLIC_UPLOAD_FOLDER}
-#private.upload.folder=${PRIVATE_UPLOAD_FOLDER}
+public.upload.folder=${PUBLIC_UPLOAD_FOLDER}
+private.upload.folder=${PRIVATE_UPLOAD_FOLDER}
 
 #JWT Related
 jwt.secret=${JWT_SECRET}
