--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,14 @@ services:
     networks:
       - proxy-network
 
+  front:
+    image: victorbartolomeo/canicampusconnect-view:0.0.1  # Remplacez par le nom de votre image Angular sur Docker Hub
+    expose:
+      - "80"
+    networks:
+      - proxy-network
+
+
   back:
     image : victorbartolomeo/canicampusconnect-api:0.0.1
     expose:
@@ -39,7 +47,7 @@ services:
       - data:/var/lib/mysql
     networks:
       - backend-network
-      -
+
   static:
     image: nginx:latest
     expose:
@@ -50,11 +58,11 @@ services:
     environment:
       - PRIVATE_UPLOAD_FOLDER=${PRIVATE_UPLOAD_FOLDER}
     networks:
-      - proxy -network
+      - proxy-network
 
 volumes:
   data:
 
-networks :
-  proxy-network :
-  backend-network :
+networks:
+  proxy-network:
+  backend-network:
