--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 JWT_SECRET=secret
 
 # Application Properties
-DB_HOST=db-1
+DB_HOST=localhost
 DB_PORT=3306
 #TODO Remplacer cette valeur secrète
 DB_USER=root
