--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #Application name
 spring.config.import=file:./.env[.properties],optional:file:./.local.env[.properties]
 spring.application.name=CaniCampusConnect-API
+spring.profiles.active=dev
 
 #Database connection
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?serverTimezone=UTC&createDatabaseIfNotExist=true
@@ -11,7 +12,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
 spring.sql.init.platform=${SQL_FILE_NAME}
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+spring.sql.init.mode=${EXECUTE_SQL}
 spring.jackson.time-zone=UTC
 
 #Picture related
