--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.profiles.active=dev
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #Database creation
 spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
