Add debug logging for Spring Security, controllers, custom JWT filter, and SQL queries in `application.properties`.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,4 +53,25 @@ app.security.token.max-emails-per-hour=3
 #Error handling
 server.error.include-message=always
 
+# Logs Spring Security - Affiche les tentatives d'accès
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.web.access=DEBUG
+logging.level.org.springframework.security.access=DEBUG
+
+# Logs JWT Filter personnalisé
+logging.level.org.example.canicampusconnectapi.security=DEBUG
+
+
+# Voir les requêtes SQL générées
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Voir les paramètres des requêtes préparées
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Logs de vos contrôleurs pour voir les paramètres reçus
+logging.level.org.example.canicampusconnectapi.controller=DEBUG
+
+
 
