--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -4,23 +4,20 @@ worker_processes auto;
 events {
  worker_connections 1024;
 }
-
 # HTTP context
 http {
  # Server block for redirecting HTTP to HTTPS
  server {
  listen 80;
- server_name canicampusconnect.com;
+ server_name monsite.com;
  return 301 https://$host$request_uri;
  }
  # Server block for handling HTTPS traffic
  server {
  listen 443 ssl;
- server_name canicampusconnect.com;
+ server_name monsite.com;
  ssl_certificate /etc/nginx/certs/fullchain.crt;
  ssl_certificate_key /etc/nginx/certs/privkey.crt;
-
-
  location /api/ {
  proxy_pass http://back:8080/;
  proxy_set_header Host $host;
@@ -28,8 +25,6 @@ http {
  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
  proxy_set_header X-Forwarded-Proto $scheme;
  }
-
-
  location /static/ {
  proxy_pass http://static:80/;
  proxy_set_header Host $host;
