--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,17 @@ jobs:
       - name: Update DB_HOST in application.properties, to database service name in docker-compose (db)
         run: sed -i 's/${DB_HOST}/db/' src/main/resources/application.properties
 
+      - name: Update production secrets
+        run: |
+          sed -i 's/${DB_PASSWORD}/${{ secrets.DB_PASSWORD }}/' src/main/resources/application.properties
+          sed -i 's/${DDL_AUTO}/validate/' src/main/resources/application.properties
+          sed -i 's/${EXECUTE_SQL}/never/' src/main/resources/application.properties
+          sed -i 's/${EMAIL_HOST}/${{ secrets.EMAIL_HOST }}/' src/main/resources/application.properties
+          sed -i 's/${EMAIL_PORT}/${{ secrets.EMAIL_PORT }}/' src/main/resources/application.properties
+          sed -i 's/${EMAIL_USER}/${{ secrets.EMAIL_USER }}/' src/main/resources/application.properties
+          sed -i 's/${EMAIL_PASSWORD}/${{ secrets.EMAIL_PASSWORD }}/' src/main/resources/application.properties
+
+
       - name: Build with Maven
         run: mvn clean package
 
