--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx-proxy-dev.conf:/etc/nginx/nginx.conf
+      - ./nginx-proxy.conf:/etc/nginx/nginx.conf
       - ./certs:/etc/nginx/certs
     depends_on:
       - front
@@ -15,14 +15,14 @@ services:
       - proxy-network
 
   front:
-    image: victorbartolomeo/canicampusconnect-view:0.0.9  # Remplacez par le nom de votre image Angular sur Docker Hub
+    image: victorbartolomeo/canicampusconnect-view:0.0.1  # Remplacez par le nom de votre image Angular sur Docker Hub
     expose:
       - "80"
     networks:
       - proxy-network
 
   back:
-    image : victorbartolomeo/canicampusconnect-api:0.0.1
+    image : victorbartolomeo/canicampusconnect-api:0.0.9
     expose:
       - "8080"
     depends_on:
@@ -41,7 +41,8 @@ services:
       - "3306"
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 'root'
+      MYSQL_ROOT_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      MYSQL_DATABASE : ${DB_NAME}
     volumes:
       - data:/var/lib/mysql
     networks:
