--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
 
 
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn clean package -P prod
 
       - name: Extract version from pom.xml
         id: extract_version
