--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.config.import=file:./.env[.properties],optional:file:./.local.env[.properties]
+#spring.config.import=file:./.env[.properties],optional:file:./.local.env[.properties]
 spring.application.name=CaniCampusConnect-API
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USER}
