--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.config.import=file:./.env[.properties],optional:file:./.local.env[.properties]
+spring.config.import=file:./.env[.properties],optional:file:./.local.env[.properties]
 spring.application.name=CaniCampusConnect-API
 spring.profiles.active=prod
 
