Add certificate generation service to `docker-compose.yml` and update configurations for improved environment consistency.

--- a/.env
+++ b/.env
@@ -25,3 +25,6 @@ EMAIL_USER=email
 EMAIL_PASSWORD=passcode
 
 PRIVATE_UPLOAD_FOLDER=./uploads
+
+CERT_OWNER=CaniCampusConnect
+CERT_DOMAIN=151.80.129.115
