--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,18 @@
 services:
+  # Génération des certificats
+  cert-generator:
+    build:
+      context: .
+      dockerfile: Dockerfile.cert-generator
+    environment:
+      - CERT_OWNER=${CERT_OWNER}
+      - CERT_DOMAIN=${CERT_DOMAIN}
+    volumes:
+      - certs:/certs
+    restart: "no"
+    networks:
+      - proxy-network
+
   proxy:
     image: nginx:latest
     ports:
@@ -6,8 +20,9 @@ services:
       - "443:443"
     volumes:
       - ./nginx-proxy.conf:/etc/nginx/nginx.conf
-      - ./certs:/etc/nginx/certs
+      - certs:/etc/nginx/certs
     depends_on:
+      - cert-generator
       - front
       - back
       - static
@@ -62,6 +77,7 @@ services:
 
 volumes:
   data:
+  certs:
 
 networks:
   proxy-network:
