--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-#spring.config.import=file:./.env[.properties],optional:file:./.local.env[.properties]
+#desac le .env pour prod
+spring.config.import=file:./.env[.properties],optional:file:./.local.env[.properties]
 spring.application.name=CaniCampusConnect-API
-spring.profiles.active=prod
+#spring.profiles.active=prod
 
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USER}
